tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,19): error TS2345: Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'ReadonlyArray<[string, boolean]>'.
  Type '[string, number] | [string, true]' is not assignable to type '[string, boolean]'.
    Type '[string, number]' is not assignable to type '[string, boolean]'.
      Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'ReadonlyArray<[string, boolean]>'.
!!! error TS2345:   Type '[string, number] | [string, true]' is not assignable to type '[string, boolean]'.
!!! error TS2345:     Type '[string, number]' is not assignable to type '[string, boolean]'.
!!! error TS2345:       Type 'number' is not assignable to type 'boolean'.
    for (var [k, v] of map) {
        k;
        v;
    }